@@ -1,5 +1,11 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
+KTIGCC 1.09 (2007-10-09):
+
+* Fixed infinite loop when parsing user headers including each other for
+  completion information.
+
+
 KTIGCC 1.08 (2007-07-09):
 
 * KDElibs 3.5.7 or higher are now required.
